syntax = "proto3";
package com.xabe.vehicle.search;

option java_package = "com.xabe.vehicle.api.grpc.search.getvehicle";

message GetVehicleRequest {

  string filter = 1;

  int64 visibility_version = 2;

  string store_id = 3;

  string locale = 4;

  bool filter_has_prices = 5;

  message SectionDefinition {

    int32 sequence_no = 1;

    string filter_query = 2;
  }

  repeated SectionDefinition sections = 6;

}
